--- a/style.css
+++ b/style.css
@@ -1,133 +1,134 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    font-family: 'Roboto', sans-serif;
-    background-image: linear-gradient(75deg, rgb(192, 255, 192) 20%,rgb(229, 114, 245));
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  font-family: "Roboto", sans-serif;
+  background-color: rgb(171, 203, 253);
 }
 .counter-app {
-    position: relative;
+  position: relative;
 }
 
 .app-body {
-    display: flex;
-    flex-direction: column;
-    width: 600px;
-    height: 600px;
-    border-radius: 15px;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, .6);
-    overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  width: 600px;
+  height: 600px;
+  border-radius: 15px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.6);
+  overflow: hidden;
 }
 
 .image-section {
-    position: relative;
-    height: 400px;
-    background-image: url('https://cdn.pixabay.com/photo/2020/01/30/21/24/neon-4806610__340.jpg');
-    background-size: cover;
-    background-position: center;
+  position: relative;
+  height: 400px;
+  background-image: url("https://cdn.pixabay.com/photo/2020/01/30/21/24/neon-4806610__340.jpg");
+  background-size: cover;
+  background-position: center;
 }
 
 .settings-btn {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    padding: 20px 30px;
-    font-size: 32px;
-    background-color: #F9F9F9;
-    border: 1px solid #333;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color .3s, color .3s;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  padding: 20px 30px;
+  font-size: 32px;
+  background-color: #fff;
+  border: 1px solid #333;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.1s, color 0.3s;
 }
 
 .settings-btn:hover {
-    color: #F9F9F9;
-    background-color: #333;
+  color: #fff;
+  background-color: rgb(226, 61, 61);
 }
 
 .time-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 400px;
-    background-color: #fff;
-    z-index: 100;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 400px;
+  background-color: #fff;
+  z-index: 100;
 }
 
 h3 {
-    font-size: 24px;
-    text-align: center;
+  font-size: 32px;
+  text-align: center;
 }
 
 .time-cards {
-    display: flex;
-    justify-content: space-evenly;
-    width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
 }
 
 .card {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 40px 0;
-    width: 18%;
-    text-align: center;
-    border: 1px solid black;
-    border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 40px 0;
+  width: 18%;
+  text-align: center;
+  border: 1px solid black;
+  border-radius: 8px;
 }
 
 .number {
-    margin-bottom: 20px;
-    font-weight: bold;
-    font-size: 48px;
+  margin-bottom: 20px;
+  font-weight: bold;
+  font-size: 48px;
 }
 
 .card-title {
-    text-align: center;
+  text-align: center;
 }
 
 .settings {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    padding: 50px 30px;
-    width: 400px;
-    background-color: #fff;
-    border: 1px solid black;
-    border-radius: 8px;
-    opacity: 0;
-    transition: transform .5s, opacity .3s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  padding: 50px 30px;
+  width: 400px;
+  background-color: #fff;
+  border: 1px solid black;
+  border-radius: 8px;
+  opacity: 0;
+  transition: transform 0.5s, opacity 0.3s;
 }
 
 .active {
-    transform: translateX(430px);
-    opacity: 1;
+  transform: translateX(430px);
+  opacity: 1;
 }
 
 h1 {
-    margin-bottom: 30px;
-    text-transform: uppercase;
+  margin-bottom: 30px;
+  text-transform: uppercase;
 }
 
 label {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 input {
-    margin-bottom: 30px;
-    padding: 10px 20px;
-    width: 100%;
+  margin-bottom: 30px;
+  padding: 10px 20px;
+  width: 100%;
+  font-size: 16px;
 }
 
 .date {
@@ -135,6 +136,13 @@ input {
 }
 
 .save {
-    padding: 10px 20px;
-    cursor: pointer;
+  padding: 10px 20px;
+  cursor: pointer;
+  border: 2px solid black;
+  background-color: #fff;
+  font-size: 22px;
+  box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0.5);
+}
+.save:hover {
+  box-shadow: 0 0 7px 3px rgba(0, 0, 0, 0.5);
 }
