--- a/style.css
+++ b/style.css
@@ -73,11 +73,10 @@ h3 {
 }
 
 .card {
-  display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 40px 0;
-  width: 18%;
+  min-width: 18%;
   text-align: center;
   border: 1px solid black;
   border-radius: 8px;
